--- a/index.html
+++ b/index.html
@@ -2,32 +2,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Woodhill MTB Trails</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8">
+  <title>New Zealand MTB Trails</title>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+  <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet" />
   <style>
-    html, body, #map {
-      height: 100%;
-      margin: 0;
+    body { margin:0; padding:0; }
+    #map { position:absolute; top:0; bottom:0; width:100%; }
+    #toggleBtn {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 1;
+      background: white;
+      border: none;
+      padding: 8px;
+      font-size: 14px;
+      cursor: pointer;
+      border-radius: 5px;
     }
   </style>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 </head>
 <body>
+  <button id="toggleBtn">Switch to Satellite</button>
   <div id="map"></div>
-  <script>
-    var map = L.map('map').setView([-36.7983, 174.3911], 15); // Woodhill MTB Park
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 19,
-    }).addTo(map);
-
-    var popupContent = "<b>Woodhill MTB Park</b><br><img src='https://www.woodhillmountainbikepark.co.nz/uploads/1/2/4/1/124163830/published/img-7993.jpg?1584301812' width='200'><br><a href='https://www.youtube.com/watch?v=FPSTvh6gXoo' target='_blank'>Watch ride video</a>";
-
-    L.marker([-36.7983, 174.3911]).addTo(map)
-      .bindPopup(popupContent)
-      .openPopup();
-  </script>
+  <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
+  <script src="map.js"></script>
 </body>
 </html>
